--- a/service/service-oss/src/main/resources/application.properties
+++ b/service/service-oss/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 #阿里云 OSS
 #不同的服务器，地址不同
-aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI5tNf4mAyWoNHn5A86CZB
-aliyun.oss.file.keysecret=rBgxvni0xTCjkrvd0zLSud6FbiDpGW
+aliyun.oss.file.endpoint=你的bucket
+aliyun.oss.file.keyid=
+aliyun.oss.file.keysecret=
 #bucket可以在控制台创建，也可以使用java代码创建
 aliyun.oss.file.bucketname=edu-xuge-1001
 
